--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -4,5 +4,5 @@
   unused-packages = true
 
 [metadata.heroku]
-  root-package = "bugsnagmattermost"
+  root-package = "github.com/chrisjoyce911/bugsnagmattermost"
   go-version = "1.10.2"
