--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "bugsnagmattermost backend API",
   "description": "GoLang API for bugsnagmattermost",
-  "website": "https://github.com/chrisjoyce911/bugsnagmattermost",
-  "repository": "https://github.com/chrisjoyce911/bugsnagmattermost"
+  "website": "http://github.com/chrisjoyce911/bugsnagmattermost",
+  "repository": "http://github.com/chrisjoyce911/bugsnagmattermost"
 }
